--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@ body {
 
   header {
     flex: 0 80px;
-    background-color: peachpuff;
-    border-bottom: solid black thin;
+    background-color: hsl(196, 65%, 76%);
+    border-bottom: solid whitesmoke thick;
     color: darkslategray;
   }
 
@@ -35,7 +35,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background-color: lightblue;
+    background-color: hsl(199, 72%, 89%);
   }
   h1 {
     flex: 0.5;
@@ -53,7 +53,8 @@ body {
   
   footer {
     flex: 0 50px;
-    background-color: peachpuff;
+    background-color:  hsl(196, 65%, 76%);
+    border-top: solid whitesmoke thick;
   }
   footer a{
     float: right;
