--- a/about.css
+++ b/about.css
@@ -1,5 +1,6 @@
 main {
-    flex-direction: row;    
+    flex-direction: row;  
+    flex-wrap: wrap;  
 }
 
 iframe {
@@ -11,6 +12,7 @@ iframe {
     flex: 1;
     margin-left: 3vw;
     margin-top: 3vh;
+    margin-right: 3vw;
     align-self: stretch;
 }
 
@@ -44,11 +46,14 @@ audio{
     iframe{
         display:none;
     }
-    audio{
-        width: 60vw;
-    }
     .birdImage {
         height:30vh;
         margin-bottom: 2vh;
+    }
+  }
+
+  @media (max-width: 820px) {
+    audio{
+        width: 70vw;
     }
   }
