--- a/play.css
+++ b/play.css
@@ -45,6 +45,10 @@
 .score{
     font-size: xx-large;
 }
+#countDown{
+    display: flex;
+    flex-direction: row-reverse;
+}
 
 @media (max-height: 600px) {
     .message {
