--- a/main.css
+++ b/main.css
@@ -66,8 +66,36 @@ body {
     float: right;
   }
   
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap'); */
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;800&display=swap');
+
+
+h1 {
+  font-family: "Inter",sans-serif;
+  font-weight: 800 !important;
+}
+  h2 {
+  font-family: "Inter",sans-serif;
+  font-weight: 500;
+  }
+
+  h3 {
+  font-family: "Inter",sans-serif;
+  font-weight: 400;
+  }
+
+p{
+  font-family: "Inter",sans-serif;
+  font-weight: 400;
+}
+
+nav{
+  font-family: "Inter",sans-serif;
+  font-weight: 400;
+  font-size: larger;
+}
+/* 
   h1 {
     font-family: "Crimson Text", serif;
     font-weight: 700 !important;
@@ -91,4 +119,4 @@ body {
     font-family: "Crimson Text", serif;
     font-weight: 400;
     font-size: larger;
-  }
+  } */
